--- a/index.html
+++ b/index.html
@@ -40,37 +40,37 @@
               <div class="mx-auto"></div>
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a class="nav-link active" aria-current="page" href="#Home"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Course</a>
+                  <a class="nav-link" href="#Course">Course</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Price</a>
+                  <a class="nav-link" href="#Price">Price</a>
                 </li>
                 <li class="nav-item dropdown">
                   <div class="dropdown">
-                    <a href="#" class="nav-link">PAGES</a>
+                    <a href="#" class="nav-link">Pages</a>
                     <div class="dropdown-content">
-                      <a href="#">Generic</a>
-                      <a href="#">Element</a>
+                      <a href="#purchase">Generic</a>
+                      <a href="#download">Element</a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Fact</a>
+                  <a class="nav-link" href="#fact">Fact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#aboutus">About</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
       </div>
-      <div class="container text-center">
+      <div class="container text-center" id="Home">
         <div class="row">
           <div class="col-md-7 col-sm-12">
             <h6>AUTHOR DAILY TUITION</h6>
@@ -89,7 +89,7 @@
       </div>
     </header>
     <main>
-      <section class="section-1">
+      <section class="section-1" id="Course">
         <div class="container text-center">
           <div class="row">
             <div class="col-md-6 col-12">
@@ -114,7 +114,7 @@
           </div>
         </div>
       </section>
-      <section class="section-2 container-fluid p-0">
+      <section class="section-2 container-fluid p-0" id="Price">
         <div class="cover">
           <div class="content text-center">
             <h1>Some futures some made us unique</h1>
@@ -146,7 +146,7 @@
             </div>
           </div>
         </div>
-        <div class="purchase text-center">
+        <div class="purchase text-center" id="purchase">
           <h1>Purchase whatever youwant</h1>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
           <div class="cards">
@@ -206,7 +206,7 @@
           </div>
         </div>
       </section>
-      <section class="section-3 container-fluid p-0 text-center">
+      <section class="section-3 container-fluid p-0 text-center" id="download">
         <div class="row">
           <div class="col-md-12 col-sm-12">
             <h1>Download our app for all platforms</h1>
@@ -243,7 +243,7 @@
           </div>
         </div>
       </section>
-      <section class="section-4">
+      <section class="section-4" id="fact">
         <div class="container text-center">
           <h1 class="text-dark">What Our Reader's Say About Us</h1>
           <p class="text-secondary">Lorem ipsum dolor sit amet.</p>
@@ -259,7 +259,7 @@
                 />
               </div>
               <div class="card-body">
-                <h3 class="card-title">Mahamad Anif</h3>
+                <h3 class="card-title">Mr.Sanjeev Kumar</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Corporis aperiam doloribus harum odit culpa. Laborum facilis
@@ -291,7 +291,7 @@
                       />
                     </div>
                     <div class="card-body">
-                      <h3 class="card-title">T Sajahan</h3>
+                      <h3 class="card-title">Mr.Sanjeev</h3>
                       <p class="card-text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit. Corporis aperiam doloribus harum odit culpa.
@@ -316,7 +316,7 @@
                       />
                     </div>
                     <div class="card-body">
-                      <h3 class="card-title">Mr.Naagraj</h3>
+                      <h3 class="card-title">Mr.Santhosh</h3>
                       <p class="card-text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit. Corporis aperiam doloribus harum odit culpa.
@@ -327,7 +327,7 @@
                       <a href="#" class="text-secondary text-decoration-none"
                         >Go Somewhere</a
                       >
-                      <p class="text-black-50">CEO at Google</p>
+                      <p class="text-black-50">Army commando</p>
                     </div>
                   </div>
                 </div>
@@ -366,7 +366,7 @@
       <div class="container-fluid p-0">
         <div class="row text-left">
           <div class="col-md-5">
-            <h1 class="text-light">About Us</h1>
+            <h1 class="text-light" id="aboutus">About Us</h1>
             <p class="text-muted">
               Lorem ipsum dolor, sit amet consectetur adipisicing.
             </p>
